--- a/css/style.css
+++ b/css/style.css
@@ -6,7 +6,12 @@
 .container{ max-width: 900px; }
 
 h1{ font-size: 39px; line-height: 1.3; }
-h1 span.red{ color: #FF0000; }
+span.red{ color: #FF0000; }
+
+.list-group {
+    display: table;
+    width: 100%;
+}
 
 .list-group-item {
     display: table-cell!important;
@@ -19,7 +24,7 @@ h1 span.red{ color: #FF0000; }
 .list-group-item:first-child,.list-group-item:last-child{ border-radius: 10px; } 
 
 .panel-primary>.panel-heading {
-    color: #FF0000;
+    color: #202020;
     background-color: #FFFFFF;
     border: 0px;
     }
