--- a/css/style.css
+++ b/css/style.css
@@ -7,8 +7,10 @@ body{ color: #474747; }
 
 .container{ max-width: 900px; }
 
-h1{ font-size: 39px; line-height: 1.3; }
+h1{ font-size: 39px; }
+h1,h2,h3,h4,h5{ color: #202020; line-height: 1.3; }
 span.red{ color: #FF0000; }
+span.grey{ color: #474747; font-weight: 400; }
 
 .list-group {
     display: table;
@@ -24,6 +26,15 @@ span.red{ color: #FF0000; }
     border-radius: 10px;
     }
 .list-group-item:first-child,.list-group-item:last-child{ border-radius: 10px; } 
+
+#attraction-panel .col-md-6{ padding: 0px 40px; }
+
+h2.list-group-item-heading{ color: #202020; }
+
+.panel{ 
+	-webkit-box-shadow: none;
+    box-shadow: none; 
+    }
 
 .panel-primary>.panel-heading {
     color: #202020;
